i'm missing starting and stopping the timer when the 'start quiz' button is hit, and i want to hide the quiz div by default, and it switches to visible on the click of  'start quiz' button. Im missing the high scores list stored in the local storage, including the input form. cleaned up the comments from the javascript

--- a/homework_4/assets/css/bootstrap.css
+++ b/homework_4/assets/css/bootstrap.css
@@ -36,5 +36,9 @@ button{
 }
 
 #btn0:focus, #btn1:focus, #btn2:focus, #btn3:focus {
-outline: 0;
+    outline: 0;
 }
+
+/* .hidden {
+    display: none;
+} */
